[package]
name = "kairos-test-utils"
version = "0.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "cctld"
path = "bin/cctld.rs"
version = "0.0.1"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]

anyhow = "1"
backoff = { version = "0.4", features = ["tokio", "futures"]}
casper-client = "2"
nom = "7"
sd-notify = "0.4"
tokio = { version = "1", features = [ "full", "tracing", "macros" ] }
tempfile = "3"
tracing = "0.1"

