[tool.poetry]
name = "pycctl"
version = "0.1.0"
description = ""
authors = ["Mark A. Greenslade <asladeofgreen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
